Add ability to set default audio/video files volume

--- a/TODO.txt
+++ b/TODO.txt
@@ -9,7 +9,7 @@
 [done] Implement user CSS
 [done] Add ability to hide tripcodes/user names
 [done] Strike out links to hidden posts
-* Add ability to set default audio/video files volume
+[done] Add ability to set default audio/video files volume
 * Add ability to remove EXIF information from images
 * Add ability to automatically mark a thread as favofite when posting a reply
 * Add markup buttons bar
