--- a/TODO.txt
+++ b/TODO.txt
@@ -18,8 +18,10 @@
 [done] Fix displaying deleted favorite threads
 [done] Remember deleted favorite thread subject
 [done] Add ability to remove EXIF information from images
+[done] Add post sequence numbers
 * Implement auto post hiding system
 
 * Reload codecha instead of reloading a page
 * Implement proxy blocking
 * Use D-Pointer approach for the lib
+* Improve mobile device compatibility
