--- a/TODO.txt
+++ b/TODO.txt
@@ -19,9 +19,9 @@
 [done] Remember deleted favorite thread subject
 [done] Add ability to remove EXIF information from images
 [done] Add post sequence numbers
+[done] Improve mobile device compatibility
 * Implement auto post hiding system
 
 * Reload codecha instead of reloading a page
 * Implement proxy blocking
 * Use D-Pointer approach for the lib
-* Improve mobile device compatibility
