--- a/TODO.txt
+++ b/TODO.txt
@@ -33,8 +33,9 @@
 [done] Improve timezone handling
 [done] Implement collapsible spoilers
 [done] Add ability to attach files by URL
+[done] Improve geolocation
+[done] Get site protocol and domain from JS location object
 
 * Reload codecha instead of reloading a page
 * Implement proxy blocking
 * Use D-Pointer approach for the lib
-* Improve geolocation
