Implement moving threads between boards

--- a/TODO.txt
+++ b/TODO.txt
@@ -37,9 +37,9 @@
 [done] Get site protocol and domain from JS location object
 [done] Add threads catalogs
 [done] Implement RSS feed
+[done] Implement moving threads between boards
 * Reimplement post text parser
 
-* Implement moving threads between boards
 * Reload codecha instead of reloading a page
 * Implement proxy blocking
 * Use D-Pointer approach for the lib
