Reimplement post text parser; change markup

--- a/TODO.txt
+++ b/TODO.txt
@@ -40,7 +40,7 @@
 [done] Implement moving threads between boards
 [done] Fix /echo/ script
 [done] Fix ascetic mode actions/buttons
-* Reimplement post text parser
+[done] Reimplement post text parser
 * Check file size on the client side
 
 * Reload codecha instead of reloading a page
