--- a/TODO.txt
+++ b/TODO.txt
@@ -8,6 +8,7 @@
 [done] Make video files movable
 [done] Add minimalistic post form mode
 [done] Add sorting by last post date in catalog
+[done] Implement adding custom links to navbar
 
 * Use D-Pointer approach for the lib
 * Reload codecha instead of reloading a page
