--- a/TODO.txt
+++ b/TODO.txt
@@ -13,7 +13,7 @@
 [done] Add "OP" and "You" marks to post links
 [done] Add ability to sign posts with "OP" mark
 [done] Improve YouTube video link recognition
-* Implement F.A.Q. page
+[done] Implement F.A.Q. page
 * Fix moving video files
 
 * Use D-Pointer approach for the lib
