Add "Bump limit reached/post limit reached" marks dynamically

--- a/TODO.txt
+++ b/TODO.txt
@@ -14,6 +14,7 @@
 [done] Add ability to sign posts with "OP" mark
 [done] Improve YouTube video link recognition
 [done] Implement F.A.Q. page
+[done] Add "Bump limit reached/post limit reached" marks dynamically
 * Fix moving video files
 
 * Use D-Pointer approach for the lib
