--- a/TODO.txt
+++ b/TODO.txt
@@ -16,6 +16,10 @@
 [done] Implement F.A.Q. page
 [done] Add "Bump limit reached/post limit reached" marks dynamically
 [done] Add Neutron style
+[done] Process post links of post previews
+[done] Process dynamically added post links
+* Use TagLib
+* Use album art for audio thumbnails
 * Fix moving video files
 
 * Use D-Pointer approach for the lib
