--- a/TODO.txt
+++ b/TODO.txt
@@ -31,6 +31,7 @@
 [done] Add ability to delete all posts by IP
 [done] Implement user management page
 [done] Add ability to set maximum simultaneous AJAX requests
+[done] Specify MIME-type for CSS files
 * Fix moving video files
 
 * Use D-Pointer approach for the lib
