Improve popup displaying

--- a/TODO.txt
+++ b/TODO.txt
@@ -32,6 +32,7 @@
 [done] Implement user management page
 [done] Add ability to set maximum simultaneous AJAX requests
 [done] Specify MIME-type for CSS files
+[done] Improve popup displaying
 * Fix moving video files
 
 * Use D-Pointer approach for the lib
