--- a/TODO.txt
+++ b/TODO.txt
@@ -33,7 +33,8 @@
 [done] Add ability to set maximum simultaneous AJAX requests
 [done] Specify MIME-type for CSS files
 [done] Improve popup displaying
-* Add Vimeo, COUB and Vocaroo support
+* Implement COUB video embedding
+* Implement Vimeo and Vocaroo embedding
 * Fix moving video files
 
 * Use D-Pointer approach for the lib
