--- a/TODO.txt
+++ b/TODO.txt
@@ -34,6 +34,7 @@
 [done] Specify MIME-type for CSS files
 [done] Improve popup displaying
 [done] Add Google reCAPTCHA v1
+[done] Add Burichan style
 * Implement COUB video embedding
 * Implement Vimeo and Vocaroo embedding
 * Fix moving video files
