--- a/TODO.txt
+++ b/TODO.txt
@@ -39,6 +39,7 @@
 [done] Hide navigation buttons
 [done] Cache board pages and threads
 [done] Implement basic DoS protection
+[done] Remove builtin banners
 * Implement striking out words with ^W
 * Do not show some markup buttons on some boards
 * Add post shrinking settings option
