Add ability to see raw post text

--- a/TODO.txt
+++ b/TODO.txt
@@ -44,6 +44,7 @@
 [done] Implement striking out words with ^W
 [done] Do not show some markup buttons on some boards
 [done] Fix moving video files
+[done] Add ability to see raw post text
 * Implement Vimeo and Vocaroo embedding
 
 * Use D-Pointer approach for the lib
